--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇸🇬 新加坡-596.5KB/s(Youtube:不良林), server: 103.172.116.9, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇸🇬 新加坡-1.11MB/s(Youtube:不良林), server: 103.172.116.9, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇨🇳 中国-6.83MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26210, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇯🇵 日本-3.19MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-893.9KB/s(Youtube:不良林), server: 103.172.116.9, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇸🇬 新加坡-1.08MB/s(Youtube:不良林), server: 103.172.116.9, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇯🇵 日本-727.8KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-489.8KB/s(Youtube:不良林), server: 103.172.116.9, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇸🇬 新加坡-851.1KB/s(Youtube:不良林), server: 103.172.116.9, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇸🇬 新加坡-749.3KB/s(Youtube:不良林), server: 103.172.116.9, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
   - {name: 🇸🇬 新加坡-510.3KB/s(Youtube:不良林), server: 103.172.116.9, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇸🇬 新加坡-472.6KB/s(Youtube:不良林), server: 103.172.116.9, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇸🇬 新加坡-587.8KB/s(Youtube:不良林), server: 103.172.116.9, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
   - {name: 🇸🇬 新加坡-628.2KB/s(Youtube:不良林), server: 103.172.116.9, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
   - {name: 🇸🇬 新加坡-590.6KB/s(Youtube:不良林), server: 103.172.116.9, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-893.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-587.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-893.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-587.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-893.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-587.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-893.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-587.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-893.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-587.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-893.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-587.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-893.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-587.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
 rules:
