--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-596.5KB/s(Youtube:不良林), server: 103.172.116.9, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇸🇬 新加坡-1.11MB/s(Youtube:不良林), server: 103.172.116.9, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇯🇵 日本-727.8KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.90MB/s(Youtube:不良林), server: ty2-1.nigirocloud.com, port: 443, type: trojan, password: ruWkGdbUKT4RN7kZ8t, sni: ty2-1.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-489.8KB/s(Youtube:不良林), server: 103.172.116.9, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇸🇬 新加坡-851.1KB/s(Youtube:不良林), server: 103.172.116.9, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇸🇬 新加坡-749.3KB/s(Youtube:不良林), server: 103.172.116.9, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇸🇬 新加坡-161.7KB/s(Youtube:不良林), server: 103.172.116.9, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇨🇳 中国-3.70MB/s(Youtube:不良林), server: 43.154.72.145, port: 27091, type: vmess, uuid: 2f1e82e4-5319-4278-92aa-74d49c04683f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.72.145]}}}
+  - {name: 🇳🇱 荷兰-160.0KB/s(Youtube:不良林), server: 213.183.59.229, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇸🇬 新加坡-475.3KB/s(Youtube:不良林), server: 103.172.116.9, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇸🇬 新加坡-152.6KB/s(Youtube:不良林), server: 103.172.116.9, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
   - {name: 🇸🇬 新加坡-510.3KB/s(Youtube:不良林), server: 103.172.116.9, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇸🇬 新加坡-472.6KB/s(Youtube:不良林), server: 103.172.116.9, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
   - {name: 🇸🇬 新加坡-628.2KB/s(Youtube:不良林), server: 103.172.116.9, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
   - {name: 🇸🇬 新加坡-590.6KB/s(Youtube:不良林), server: 103.172.116.9, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-160.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-475.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-160.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-475.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-160.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-475.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-160.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-475.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-160.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-475.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-160.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-475.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-596.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-727.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-489.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-851.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-749.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-161.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-160.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-475.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-510.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-628.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
 rules:
