--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-152.6KB/s(Youtube:不良林), server: 103.172.116.9, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇸🇬 新加坡-538.5KB/s(Youtube:不良林), server: 103.172.116.9, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇨🇳 中国-326.7KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇮🇳 印度-508.2KB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.02MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45785, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇸🇬 新加坡-1.11MB/s(Youtube:不良林), server: 103.172.116.9, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
   - {name: 🇺🇸 美国-5.79MB/s(Youtube:不良林), server: bwg.sulink.cn, port: 444, type: trojan, password: kLbgFTbFYm, sni: bwg.sulink.cn, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.42MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.36MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26210, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇸🇬 新加坡-150.7KB/s(Youtube:不良林), server: 103.172.116.9, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇸🇬 新加坡-590.6KB/s(Youtube:不良林), server: 103.172.116.9, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
   - {name: 🇰🇷 韩国-9.16MB/s(Youtube:不良林), server: 129.154.48.221, port: 37372, type: vmess, uuid: 6f4454a9-e732-46c6-c50f-73f13da31f7b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇯🇵 日本-5.05MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.89MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.77MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-538.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
       - 🇰🇷 韩国-9.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-538.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
       - 🇰🇷 韩国-9.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-538.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
       - 🇰🇷 韩国-9.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-538.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
       - 🇰🇷 韩国-9.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-538.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
       - 🇰🇷 韩国-9.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-538.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
       - 🇰🇷 韩国-9.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-152.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-538.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-508.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-590.6KB/s(Youtube:不良林)
       - 🇰🇷 韩国-9.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
